--- a/ng-example/src/app/app.component.html
+++ b/ng-example/src/app/app.component.html
@@ -16,7 +16,7 @@
           <a class="nav-link" href="#" [routerLink]="['about']">About</a>
         </li>
           <li class="nav-item">
-          <a class="nav-link" href="#" [routerLink]="">Books</a>
+          <a class="nav-link" href="#" [routerLink]="['books']">Books</a>
         </li>
          <li class="nav-item">
           <a class="nav-link" href="#" [routerLink]="">Register</a>
