--- a/ng-example/src/app/app.component.html
+++ b/ng-example/src/app/app.component.html
@@ -24,7 +24,7 @@
       </ul>
       <div class="form-inline">
         <input  id="inputSearchBar" class="form-control mr-sm-2" type="text" 
-        placeholder="Search" >
+        placeholder="Search" [(ngModel)]="searchText" (keyup)="onSearch($event)" >
         <button class="btn btn-outline-info my-2 my-sm-0" type="submit">Search</button>
       </div>
     </div>
