--- a/ng-example/src/app/app.component.html
+++ b/ng-example/src/app/app.component.html
@@ -19,7 +19,7 @@
           <a class="nav-link" href="#" [routerLink]="['books']">Books</a>
         </li>
          <li class="nav-item">
-          <a class="nav-link" href="#" [routerLink]="">Register</a>
+          <a class="nav-link" href="#" [routerLink]="['register']">Register</a>
         </li>
       </ul>
       <div class="form-inline">
